Extend build executor.